fix debate voting triangle click width too wide

--- a/kaif-web/src/main/webapp/less/component.less
+++ b/kaif-web/src/main/webapp/less/component.less
@@ -140,7 +140,6 @@ a.create-article {
 }
 
 .debate-vote-box a {
-  display: block;
 }
 
 .debate-info {
@@ -216,6 +215,9 @@ a.create-article {
   transform: rotate(-360deg);
 }
 
+//
+// zone-list
+//
 .zone-list {
   .zone-category {
     border-bottom: 1px solid @gray-lightest;
