--- a/kaif-web/src/main/webapp/less/grid.less
+++ b/kaif-web/src/main/webapp/less/grid.less
@@ -67,5 +67,4 @@
 
 .grid-center-row {
   margin-left: @convex-row-width;
-  width: 100%;
 }
